# another-mandelbrot

./: README.md  git_help
Project1113/0graphics/: graphicslibrary.h
Project1113/0mandelbrot/: main.c
Project1113/UDPClient/: CMakeLists.txt  main.c
Project1113/UDPServer/: CMakeLists.txt  UDP_Routines.c  UDP_Routines.h  main.c
Project1113/simpleGraphics/: graphics_utilities.c  graphics_utilities.h  main.c  xwindows_utilities.c  xwindows_utilities.h
UDPClient/: CMakeLists.txt  main.c
UDPServer/: CMakeLists.txt  UDP_Routines.c  UDP_Routines.h  main.c
client/: CMakeLists.txt  main.c
graphics/: CMakeLists.txt  graphicslibrary.c
mandelbrot/: CMakeLists.txt  mandelbrot.c
mandy_client/: CMakeLists.txt  graphics_utilities.c  graphics_utilities.h  graphicslibrary.c  graphicslibrary.h  main.c  xwindows_utilities.c  xwindows_utilities.h
mandy_server/: CMakeLists.txt  UDP_Routines.c  UDP_Routines.h  graphics_utilities.h  graphicslibrary.c  graphicslibrary.h  main.c  mandelbrot.c  mandelbrot.h
server/: CMakeLists.txt  main.c
simpleGraphics/: CMakeLists.txt  graphics_utilities.c  graphics_utilities.h  main.c  xwindows_utilities.c
test_client/: CMakeLists.txt  main.c
test_client_NET/: CMakeLists.txt  main.c
test_client_UDS/: main.c
test_config/: CMakeLists.txt  main.c
test_server/: CMakeLists.txt  main.c
testing/test_argp/: CMakeLists.txt  main.c
testing/test_argp_and_config/: CMakeLists.txt  main.c
testing/test_client_UDS/: CMakeLists.txt
testing/test_config/: main.c
testing/test_server_NET/: CMakeLists.txt
testing/test_server_UDS/: CMakeLists.txt  main.c
